--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,3 +5,13 @@
 width: 100%;
 height: 100%;
 }
+.left {
+    float : left;
+    width : 48%;
+    height : 450px;
+}
+.right {
+    float : left;
+    width : 48%;
+    height : 450px;
+}
