i have have completed HTML-CSS Assignment

--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -1,7 +1,107 @@
 /* Our CSS file. */
 
 
-.container, .content {
+#container {
 width: 100%;
-height: 100%;
+height: 1110px;
+border: 1px solid black;
+}
+
+.Head_part{
+    height:200px;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.Sub_head{
+    margin: 15px 9px;
+    border: 1px solid black;
+    height:100px;
+    background-color: rgb(233, 240, 243);
+}
+.Logo_section{
+    height:40px;
+    float: left;
+    width: 5%;
+    margin: 40px 9px;
+}
+.Search_bar{
+    float: right;
+    margin: 45px 9px 20px;
+    width: 13%;
+    padding : 2px;
+}
+.Navbar_part{
+    border: 1px solid black;
+    display: block;
+    height : 70px;
+    margin: 20px 9px;
+    display: block;
+
+}
+.Links{
+    display: inline-block;
+    height: 15px;
+    margin-bottom: 20px;
+    width: 10%;
+}
+.body_part{
+    height: 600px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+aside,section,aside{
+display: inline-block;
+    
+}
+.Left_side{
+    height :560px;
+    border: 1px solid black;
+    float:left;
+    width: 20%;
+    margin-top: 15px;
+    margin-left: 9px;
+}
+.Right_part{
+    height :560px;
+    border: 1px solid black;
+    float:right;
+    width: 20%;
+    margin-top: 15px;
+    margin-right: 9px;
+}
+#main-content-section{
+    height :560px;
+    width:55%;
+    box-sizing: border-box;
+    border: 1px solid black;
+    margin-right: 10px;
+    margin-top: 15px;
+    margin-left: 25px;
+}
+li{
+    list-style: none;
+    padding-top: 30px;
+}
+#right-sidebar-menu{
+    list-style: none;
+    padding: 30px;
+}
+.post-img{
+    width: 180px;
+    height:230px;
+    padding-right:20px ;
+    margin-left: 60px;
+    padding-top: 30px;
+}
+#page-footer{
+    height: 250px;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+p{
+    padding-top: 5px;
+    margin: 10px 10px;
 }
