--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,13 +5,13 @@
 width: 100%;
 height: 100%;
 }
-.left {
-    float : left;
-    width : 48%;
+.left{
+    width : 45%;
     height : 450px;
+    float : left;
 }
-.right {
-    float : left;
-    width : 48%;
+.right{
+    width : 45%;
     height : 450px;
+    float : right;
 }
