--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -1,17 +1,34 @@
 /* Our CSS file. */
 
 
-.container, .content {
-width: 100%;
-height: 100%;
+#container, .content {
+    width: 100%;
+    height: 900px;
+    background-color: rgb(240, 246, 248);
 }
-.left{
+.First_section{
+    float: left;
+    height : 400px;
     width : 45%;
-    height : 450px;
-    float : left;
+    margin: 20px 50px;
+    margin-right: 10px;
+    background-color: white;
 }
-.right{
-    width : 45%;
-    height : 450px;
-    float : right;
+img{
+    width : 95%;
+    height : 360px;
+    margin: 20px;
 }
+.Second_section{
+    float: right;
+    height : 400px;
+    width : 45%; 
+    margin: 20px 50px;
+    margin-left: 10px;
+    background-color: white;
+}
+h1{
+    padding: 150px;
+    height : 50px;
+}
+
