I have completed my assignment_3

--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -1,7 +1,85 @@
 /* Our CSS file. */
-
-
-.container, .content {
-width: 100%;
-height: 100%;
+*{
+    margin: 0;
+    padding: 0;
 }
+
+#container {
+width: 100vw;
+height: 100vh;
+display: flex;
+flex-direction: column;
+overflow: none;
+row-gap: 5vh;
+}
+.container1{
+    min-height: 47vh;
+    border: 1px solid black;
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: row;
+}
+.Toppart{
+    width: 50%;
+}
+.Toppart,.left{
+    margin-left: 5%;
+    width: 45%;
+}
+.head{
+    width: 50%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+p{
+    width: 90%;
+    font-size: 17px;
+}
+button{
+    height: 50px;
+    width: 100px;
+    background-color: black;
+    color: white;
+    margin-top: 20px;
+}
+.Toppart ,.right{
+    margin-right: 3%;
+}
+#render-wiki{
+    width:100%;
+    height: 85%;
+    margin-top: 5%;
+}
+.container2{
+    min-height: 60vh;
+    border: 1px solid black;
+    background-color: #f2f2f2;   
+}
+.top,.down{
+    display: block;
+}
+.top{
+    text-align: center;
+}
+.head1{
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.para{
+    margin-left: 30%;
+    width: 50%;
+    text-align: left;
+}
+.button_2{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.down{
+    margin-top: 0;
+    text-align: center;
+}
+#render-dictionary{
+    width: 50%;
+    height: 200px
+}
+
