--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -1,7 +1,82 @@
 /* Our CSS file. */
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: rgb(216, 207, 207);
+}
+.Main-container{
+    margin: 10vh 5vw;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.Sub-container{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+margin-bottom: 10vh;
+background-color: white;
+}
+.left{
+    width: 30%;
+    background-color: rgb(144, 197, 144);
+    position: relative;
+}
+.right{
+    width: 50%;
+    margin-left: 7vw;
+}
+.Image-1{
+    position: relative;
+    top:-50px;
+    left: -50px;
+    min-width: 30vw;
+}
+h1{
+    font-size: 4vmin;
+    margin-top: 8vh;
+}
+p{
+    font-size: 3vmin;  
+    margin-top: 3vh;
+}
+button{
+    background-color: rgb(66, 160, 66);
+    margin-top: 2vh;
+    padding: 2vh;
+    outline: none;
+    border: none;
+    border-radius: 40px;
+}
+.Image-2{
+    position: relative;
+    top:50px;
+    left: -50px;
+    min-width: 30vw;
+    margin-bottom: 60px;
+}
+@media screen and (max-width:1490px){
+    .Sub-container{
+        flex-direction: column;
+        }
+        .left{
+            width: 100%;
+            text-align: center;
+        }
+        .right{
+            width: 80%;
+        }
+        button{
+            margin-bottom:  5vh;
+        }
+        body{
+            margin: auto;
+        }
+        
 
-.container, .content {
-width: 100%;
-height: 100%;
 }
